--- a/app/style.css
+++ b/app/style.css
@@ -12,6 +12,9 @@
 .primary-blue {
   color: #003b73;
 }
+.seconday-blue {
+  color: #0000ff;
+}
 .primary-white {
   color: #fff;
 }
@@ -29,7 +32,7 @@ a {
 
 .main_nav {
   background-color: rgba(0, 0, 0, 0.6);
-  padding: 1rem 0.2rem;
+  padding: 2rem 0.2rem;
 }
 .main_title {
   color: black;
@@ -38,7 +41,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 0.4rem 0.5rem;
+  padding: 1rem 0.5rem;
   background-color: rgba(0, 0, 0, 0.3);
 }
 .left_nav {
@@ -75,7 +78,6 @@ a {
   text-align: center;
 }
 .footer_container {
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -113,10 +115,26 @@ i {
   padding: 1rem 0;
 }
 
+// ==============   Home Page ============
+
+.home_page {
+  color: #fff;
+}
+.home_page_div {
+  background-image: url("/images/car_1.jpg") no-repeat center center cover;
+  text-align: center;
+}
+.heading {
+  color: black;
+
+  height: 73vh;
+  text-align: center;
+  padding: 1rem 0;
+}
+
 // =============  Login page ===============
 
 .login_page {
-  position: fixed;
   width: 100%;
   height: 73.5vh;
   background-color: rgba(0, 0, 0, 0.5);
@@ -127,10 +145,9 @@ i {
 .login_form {
   text-align: start;
   max-width: 400px;
-  margin: auto;
   background-color: rgba(0, 0, 0, 0.2);
-  padding: 0.5rem 2rem 1rem 2rem;
-  margin-top: 2rem;
+  padding: 3rem 2rem 3rem 2rem;
+  margin: 1rem auto 1rem auto;
 }
 
 .login_form_ul {
@@ -167,6 +184,7 @@ i {
 }
 .login_create_account {
   padding-left: 2rem;
+  color: #0000ff;
 }
 
 // =================  Sign Up =====================
@@ -183,10 +201,9 @@ i {
 .signup_form {
   text-align: start;
   max-width: 400px;
-  margin: auto;
   background-color: rgba(0, 0, 0, 0.2);
-  padding: 0.5rem 2rem 1rem 2rem;
-  margin-top: 1.5rem;
+  padding: 1rem 2rem 1rem 2rem;
+  margin: 1.2rem auto 1.2rem auto;
 }
 
 .signup_form_ul {
